# SmartControl

./: .gitignore  CMakeLists.txt  SmartControlLauncher.py
other/: smartcontrol  smartcontrol.desktop
resources/i18n/: es.json
resources/printers/: kiddo.json
resources/qml/: CircularProgressBar.qml  Configuration.qml  Menu.qml  MenuButton.qml  MenuItem.qml  SmartControl.qml  SmartControlButton.qml  main.qml  util.js
resources/themes/default/: default.json
smartcontrol/: Directories.py  Internationalization.py  Printers.py  Resources.py  SmartControlApplication.py  Theme.py  Version.py.in
smartcontrol/binder/: Binder.py  InternationalizationProxy.py  PrinterProxy.py  ThemeProxy.py
smartcontrol/bindings/: Bindings.py  InternationalizationProxy.py  ThemeProxy.py
smartcontrol/printer/: Port.py  Printer.py  PrinterConnection.py  PrinterConnectionManager.py
